# py-ductus

./: .cruft.json  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
src/py_ductus/: __init__.py  main.py
src/py_ductus/common/: __init__.py  types.py
src/py_ductus/steps/: __init__.py  error.py  protocol.py
src/py_ductus/steps/xsl/: __init__.py  types.py  xsl.py
tests/: __init__.py  conftest.py  test_import.py  test_main.py
tests/steps/: test_protocol.py
tests/steps/xsl/: test_types.py  test_xsl.py
